@@ -239,7 +239,7 @@ install-data-local: all-local install-dirs-local install-extra-libs
 	${INSTALL}\
 	   `${srcdir}/../Dist/config.sdefault pathtolib`libgnat.a ${GARLIC}
 	${AR} d ${GARLIC}/libgnat.a s-stratt.o s-rpc.o s-parint.o
-	if test -d gnatlib; then\
+	if test `cat inlining` = "yes"; then\
 	   (cd gnatlib;\
 	    ${AR} cq ${GARLIC}/libgnat.a `cat rebuild`;\
             ${CP} -p `${SED} 's/\.o/.ali/g' rebuild` ${GARLIC});\
